--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   </style>
 </head>
 <body>
-  <h1>Welcome to Wayne Enterprises</h1>
+  <h1>Welcome to Wayne Enterprises.</h1>
   <img src="https://upload.wikimedia.org/wikipedia/commons/7/76/Wayne_Enterprises_%28logo%29.svg" alt="Wayne Enterprises Logo" class="center-img" />
 
   <div class="login-box">
