--- a/home.html
+++ b/home.html
@@ -201,19 +201,19 @@
 
     <div class="window">
         <a href="conception.html"><div class="window-header" data-en="Conception" data-fr="Conception">Conception</div></a>
-        <div class="window-content"></div>
+        <a href="conception.html"><div class="window-content"><img src="conception.png"></div></a>
     </div>
     <div class="window">
         <a href="comp-progress.html"><div class="window-header" data-en="Component Progress" data-fr="Progrès Des Composantes">Component Progress</div></a>
-        <div class="window-content"></div>
+        <a href="comp-progress.html"><div class="window-content"><img src="component.png"></div></a>
     </div>
     <div class="window">
         <a href="rules.html"><div class="window-header" data-en="Game Rules" data-fr="Règles Du Jeu">Game Rules</div></a>
-        <div class="window-content"></div>
+        <a href="rules.html"><div class="window-content"><img src="game-rules.png"></div></a>
     </div>
     <div class="window">
         <a href="team.html"><div class="window-header" data-en="Our Team" data-fr="Notre Équipe">Our Team</div></a>
-        <div class="window-content"></div>
+        <a href="team.html"><div class="window-content"><img src="team.png"></div></a>
     </div>
 
     <button class="credits" data-en="Credits" data-fr="Crédits"><a href="credits.html">Credits</a></button>
