testing github webhook

--- a/home.html
+++ b/home.html
@@ -193,7 +193,7 @@
 <body>
     
     <div class="navbar">
-        <button class="quiz" data-en="WHICH BATMAN CHARACTER ARE YOU? QUIZ" data-fr="QUIZ DE QUEL PERSONNAGE DE BATMAN ES-TU?"><a href="quiz.html">WHICH BATMAN CHARACTER ARE YOU? QUIZ</a></button>
+        <button class="quiz" data-en="WHICH BATMAN CHARACTER ARE YOU? QUIZ." data-fr="QUIZ DE QUEL PERSONNAGE DE BATMAN ES-TU?"><a href="quiz.html">WHICH BATMAN CHARACTER ARE YOU? QUIZ</a></button>
 
         <button class="language-toggle" onclick="toggleLanguage()" data-en="French" data-fr="Anglais">French</button>
     </div>
