--- a/rules.html
+++ b/rules.html
@@ -1,35 +1,72 @@
 <link rel="stylesheet" href="rulespanel.css">
-<h1>Game Rules</h1>
+<h1 data-i18n="game_rules">Game Rules</h1>
 <br>
 <br>
-<h2>Goal:</h2>
-<p>Score the most points by handling and placing the following engine components that will be on the playing field: fans, cores, and turbines. These components are placed into engines.</p>
-<h2>In game rules</h2>
+
+
+
+<h2 data-i18n="goal" style="text-align: center">Goal:</h2>
+<p data-i18n="scoring" style="text-align: center">Score the most points by handling and placing the following engine components that will be on the playing field: fans, cores, and turbines. These components are placed into engines.</p>
+<h2 data-i18n="game_rules2" style="text-align: center">In game rules comic:</h2>
 <article class="comic" style="background-color:#444343a5;">
 
+
+
 <div class="panel">
-    <p class="text top-left">Before the game...</p>
+    <p data-i18n="rule1" class="text top-left">Before the game...</p>
     <img src="rules/1.png" alt="">
-    <p class="text bottom-right"> - Blue team vs yellow team: 2 robots on each team. <br> - 5 minutes per heat.</p>
+    <p data-i18n="rule2" class="text bottom-right">Blue team vs yellow team: 2 robots on each team. 5 minutes per heat.</p>
 </div>
 <br>
 
 <div class="panel">
-    <p class="text top-left">Each engine component can come in blue, yellow, or red. Each team uses the parts specific to their team color.</p>
+    <p data-i18n="rule3" class="text top-left"></p>
     <img src="rules/2.png" alt="">
-    <p class="text bottom-right">6 engines, each can be completed with one fan, one core, one turbine</p>
+    <p data-i18n="rule4" class="text bottom-right"></p>
 </div>
 
 <div class="panel">
-    <p class="text top-left">Robots can only carry one component at a time. Cannot carry the other team's color: only their team's color and the red ones.</p>
+    <p data-i18n="rule5" class="text top-left"></p>
     <img src="rules/3.png" alt="">
-    <p class="text bottom-right">Red parts: unserviceable. If the component that falls out of an engine is a red part, it can be repaired in the repair station. Each team has three repair stations that can turn red parts into repaired parts of their color.</p>
 </div>
 
 <div class="panel">
-     <p class="text top-left">Spare parts lying around can be brought to the spare parts zone. Each team has one</p>
+    <p data-i18n="rule6" class="text top-left"></p>
     <img src="rules/4.png" alt="">
+    <p data-i18n="rule7" class="text bottom-right"></p>
 </div>
 
+<div class="panel">
+    <img src="rules/5.png" alt="">
+    <p data-i18n="rule8" class="text top-left"></p>
+</div>
+
+<div class="panel">
+    <p data-i18n="rule9" class="text top-left"></p>
+    <p data-i18n="rule10" class="text bottom-right"></p>
+    <img src="rules/6.png" alt="">
+</div>
+
+<div class="panel">
+    <p data-i18n="rule11" class="text top-left"></p>
+    <img src="rules/7.png" alt="">
+    <p data-i18n="rule12" class="text bottom-right"></p>
+</div>
+<div class="panel">
+    <img src="rules/8.png" alt="">
+    <p data-i18n="rule13" class="text top-left"></p>
+    <p data-i18n="rule14" class="text bottom-right"></p>
+</div>
+
+
+<div class="panel">
+    <img src="rules/9.png" alt="">
+    <p data-i18n="rule15" class="text top-left"></p>
+</div>
+<div class="panel">
+    <img src="rules/10.png" alt="">
+    <p data-i18n="rule16" class="text top-left"></p>
+    <p data-i18n="rule17" class="text bottom-right"></p>
+</div>
 
 </article>
