--- a/settings.html
+++ b/settings.html
@@ -10,9 +10,10 @@
 <body>
     <h1>SETTINGS</h1>
     </p>
-    <div class="grid_container">
+    <div style="justify-content: center" class="grid_container">
     <button class="settings_button glitch" onclick="toggleScanlines()">Toggle Scanlines</button>
     <button class="settings_button glitch" onclick="toggleFullscreen()">Toggle Fullscreen</button>
     </div>
 </body>
+
 </html>
