--- a/sidebars/home_sidebar.html
+++ b/sidebars/home_sidebar.html
@@ -13,3 +13,9 @@
 <button onclick="loadContent('credits.html','content-main')" data-i18n="credits" class="glitch" data-text="Credits"></button>
 <button onclick="loadContent('rules.html','content-main')" data-i18n="rules" class="glitch" data-text="Rules"></button>
 <button onclick="loadContent('settings.html','content-main')" data-i18n="settings" class="glitch" data-text="Settings"></button>
+<iframe
+    src="https://www.chatbase.co/chatbot-iframe/ltSDw1UKu4eEqw5JnzSFD"
+    width="100%"
+    style="height: 100%; min-height: 700px"
+    frameborder="0"
+></iframe>
