--- a/home1.html
+++ b/home1.html
@@ -10,28 +10,10 @@
     <link rel="stylesheet" href="scanlines.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="glitch.css">
-    <style>
-      body.fade-start {
-        opacity: 0;
-      }
-
-      body.fade-in {
-        animation: page-fade-in 0.8s ease forwards;
-      }
-
-      @keyframes page-fade-in {
-        from {
-          opacity: 0;
-        }
-        to {
-          opacity: 1;
-        }
-      }
-    </style>
 </head>
 
 
-<body class="scanlines fade-start">
+<body class="scanlines">
     <div class="sidebar" id="sidebar">    
           </div>
     <div class="layout-container">
@@ -42,17 +24,14 @@
 <script src="js/i18n.js"></script>
 <script src="js/site.js"></script>
 <script>
-  document.addEventListener("DOMContentLoaded", () => {
-    document.body.classList.add("fade-in");
-  });
-</script>
-<script>
         // Load saved language or default to English
         loadLanguage(localStorage.getItem("lang") || "en");
         loadContent('opening.html','content-main')
         loadContent('sidebars/home_sidebar.html','sidebar')
-        
     </script>
+
+
+ 
 <script>
 function openNav() {
   document.getElementById("sidebar").style.width = "30vw";
@@ -113,6 +92,7 @@ function toggleFullscreen() {
       elem.msRequestFullscreen();
     }
   }
+
 }
 </script>
 <script>
