group meeting fixed sidebar opacity

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
       position: relative;
       z-index: 1;
       color: #8dff8b;
+      color: #6bf7ff;
       font-size: 20px;
       letter-spacing: 0.08em;
       font-family: "Courier New", Courier, monospace;
